add checkstyle support

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ java {
     sourceCompatibility = '17'
 }
 
+apply plugin: 'checkstyle'
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
