--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.1.9'
     id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -12,6 +13,8 @@ java {
 }
 
 apply plugin: 'checkstyle'
+
+apply from: rootProject.file('gradle/config/jacoco-config.gradle')
 
 configurations {
     compileOnly {
